Refactor data cleaning

--- a/socioeconomic_us_counties.ipynb
+++ b/socioeconomic_us_counties.ipynb
@@ -2263,13 +2263,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 69,6 % UnemploymentRate for 2017 seems unrealistic and likely due to a data entry issue. \n",
-    "* however, considering the data source specifies 919 employed individuals among 3,023 VotingAgeCitizens, it appears intentional for practice purposes, so I am keeping it."
+    "* 69,6 % UnemploymentRate seems unrealistic and likely due to a data entry issue. \n",
+    "* based on some internet research, correcting to 6.9% but no chance to confirm EmployedPopulation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['County'] == 'Catron County', 'UnemploymentRate'] = 6.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>County</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>MenPopulation</th>\n",
+       "      <th>WomenPopulation</th>\n",
+       "      <th>VotingAgeCitizen</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>IncomePerCapita</th>\n",
+       "      <th>PovertyRate</th>\n",
+       "      <th>ChildPovertyRate</th>\n",
+       "      <th>EmployedPopulation</th>\n",
+       "      <th>UnemploymentRate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1796</th>\n",
+       "      <td>New Mexico</td>\n",
+       "      <td>Catron County</td>\n",
+       "      <td>3547</td>\n",
+       "      <td>1861</td>\n",
+       "      <td>1686</td>\n",
+       "      <td>3023</td>\n",
+       "      <td>42047</td>\n",
+       "      <td>22487</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>33.1</td>\n",
+       "      <td>919</td>\n",
+       "      <td>6.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           State         County  Population  MenPopulation  WomenPopulation  \\\n",
+       "1796  New Mexico  Catron County        3547           1861             1686   \n",
+       "\n",
+       "      VotingAgeCitizen  Income  IncomePerCapita  PovertyRate  \\\n",
+       "1796              3023   42047            22487         21.5   \n",
+       "\n",
+       "      ChildPovertyRate  EmployedPopulation  UnemploymentRate  \n",
+       "1796              33.1                 919               6.9  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['County'] == 'Catron County']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2282,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2305,7 +2394,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2316,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2392,7 +2481,7 @@
        "548            75.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2646,7 +2735,7 @@
        "EmploymentRate                   49.8            54.4  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2658,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2931,7 +3020,7 @@
        "EmploymentRate               68.1            72.0          58.1          60.9  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2943,7 +3032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3216,7 +3305,7 @@
        "EmploymentRate                  72.0                  71.5            63.6  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3228,7 +3317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3258,7 +3347,6 @@
        "      <th>1712</th>\n",
        "      <th>1736</th>\n",
        "      <th>1752</th>\n",
-       "      <th>1796</th>\n",
        "      <th>2376</th>\n",
        "      <th>2381</th>\n",
        "      <th>2427</th>\n",
@@ -3277,7 +3365,6 @@
        "      <td>Nebraska</td>\n",
        "      <td>Nebraska</td>\n",
        "      <td>Nevada</td>\n",
-       "      <td>New Mexico</td>\n",
        "      <td>South Dakota</td>\n",
        "      <td>South Dakota</td>\n",
        "      <td>South Dakota</td>\n",
@@ -3294,7 +3381,6 @@
        "      <td>McPherson County</td>\n",
        "      <td>Sioux County</td>\n",
        "      <td>Eureka County</td>\n",
-       "      <td>Catron County</td>\n",
        "      <td>Corson County</td>\n",
        "      <td>Dewey County</td>\n",
        "      <td>Ziebach County</td>\n",
@@ -3311,7 +3397,6 @@
        "      <td>432</td>\n",
        "      <td>1256</td>\n",
        "      <td>1728</td>\n",
-       "      <td>3547</td>\n",
        "      <td>4177</td>\n",
        "      <td>5709</td>\n",
        "      <td>2837</td>\n",
@@ -3328,7 +3413,6 @@
        "      <td>221</td>\n",
        "      <td>647</td>\n",
        "      <td>849</td>\n",
-       "      <td>1861</td>\n",
        "      <td>2125</td>\n",
        "      <td>2823</td>\n",
        "      <td>1421</td>\n",
@@ -3345,7 +3429,6 @@
        "      <td>211</td>\n",
        "      <td>609</td>\n",
        "      <td>879</td>\n",
-       "      <td>1686</td>\n",
        "      <td>2052</td>\n",
        "      <td>2886</td>\n",
        "      <td>1416</td>\n",
@@ -3362,7 +3445,6 @@
        "      <td>335</td>\n",
        "      <td>998</td>\n",
        "      <td>1306</td>\n",
-       "      <td>3023</td>\n",
        "      <td>2692</td>\n",
        "      <td>3669</td>\n",
        "      <td>1865</td>\n",
@@ -3379,7 +3461,6 @@
        "      <td>60714</td>\n",
        "      <td>45375</td>\n",
        "      <td>67159</td>\n",
-       "      <td>42047</td>\n",
        "      <td>32260</td>\n",
        "      <td>41190</td>\n",
        "      <td>35000</td>\n",
@@ -3396,7 +3477,6 @@
        "      <td>27241</td>\n",
        "      <td>26852</td>\n",
        "      <td>35606</td>\n",
-       "      <td>22487</td>\n",
        "      <td>15160</td>\n",
        "      <td>17267</td>\n",
        "      <td>13461</td>\n",
@@ -3413,7 +3493,6 @@
        "      <td>16.0</td>\n",
        "      <td>12.4</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>21.5</td>\n",
        "      <td>47.9</td>\n",
        "      <td>31.4</td>\n",
        "      <td>43.1</td>\n",
@@ -3430,7 +3509,6 @@
        "      <td>21.6</td>\n",
        "      <td>18.7</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>33.1</td>\n",
        "      <td>61.7</td>\n",
        "      <td>36.4</td>\n",
        "      <td>55.6</td>\n",
@@ -3447,7 +3525,6 @@
        "      <td>225</td>\n",
        "      <td>660</td>\n",
        "      <td>904</td>\n",
-       "      <td>919</td>\n",
        "      <td>1260</td>\n",
        "      <td>1950</td>\n",
        "      <td>967</td>\n",
@@ -3464,7 +3541,6 @@
        "      <td>32.8</td>\n",
        "      <td>33.9</td>\n",
        "      <td>30.8</td>\n",
-       "      <td>69.6</td>\n",
        "      <td>28.7</td>\n",
        "      <td>25.9</td>\n",
        "      <td>27.0</td>\n",
@@ -3481,7 +3557,6 @@
        "      <td>110</td>\n",
        "      <td>338</td>\n",
        "      <td>402</td>\n",
-       "      <td>2104</td>\n",
        "      <td>773</td>\n",
        "      <td>950</td>\n",
        "      <td>504</td>\n",
@@ -3498,7 +3573,6 @@
        "      <td>67.2</td>\n",
        "      <td>66.1</td>\n",
        "      <td>69.2</td>\n",
-       "      <td>30.4</td>\n",
        "      <td>46.8</td>\n",
        "      <td>53.1</td>\n",
        "      <td>51.8</td>\n",
@@ -3544,56 +3618,56 @@
        "UnemployedPopulation               110           338            402   \n",
        "EmploymentRate                    67.2          66.1           69.2   \n",
        "\n",
-       "                               1796           2376          2381  \\\n",
-       "State                    New Mexico   South Dakota  South Dakota   \n",
-       "County                Catron County  Corson County  Dewey County   \n",
-       "Population                     3547           4177          5709   \n",
-       "MenPopulation                  1861           2125          2823   \n",
-       "WomenPopulation                1686           2052          2886   \n",
-       "VotingAgeCitizen               3023           2692          3669   \n",
-       "Income                        42047          32260         41190   \n",
-       "IncomePerCapita               22487          15160         17267   \n",
-       "PovertyRate                    21.5           47.9          31.4   \n",
-       "ChildPovertyRate               33.1           61.7          36.4   \n",
-       "EmployedPopulation              919           1260          1950   \n",
-       "UnemploymentRate               69.6           28.7          25.9   \n",
-       "UnemployedPopulation           2104            773           950   \n",
-       "EmploymentRate                 30.4           46.8          53.1   \n",
+       "                               2376          2381            2427  \\\n",
+       "State                  South Dakota  South Dakota    South Dakota   \n",
+       "County                Corson County  Dewey County  Ziebach County   \n",
+       "Population                     4177          5709            2837   \n",
+       "MenPopulation                  2125          2823            1421   \n",
+       "WomenPopulation                2052          2886            1416   \n",
+       "VotingAgeCitizen               2692          3669            1865   \n",
+       "Income                        32260         41190           35000   \n",
+       "IncomePerCapita               15160         17267           13461   \n",
+       "PovertyRate                    47.9          31.4            43.1   \n",
+       "ChildPovertyRate               61.7          36.4            55.6   \n",
+       "EmployedPopulation             1260          1950             967   \n",
+       "UnemploymentRate               28.7          25.9            27.0   \n",
+       "UnemployedPopulation            773           950             504   \n",
+       "EmploymentRate                 46.8          53.1            51.8   \n",
        "\n",
-       "                                2427           2653           2673  \\\n",
-       "State                   South Dakota          Texas          Texas   \n",
-       "County                Ziebach County  Kenedy County  Loving County   \n",
-       "Population                      2837            564             74   \n",
-       "MenPopulation                   1421            280             39   \n",
-       "WomenPopulation                 1416            284             35   \n",
-       "VotingAgeCitizen                1865            296             59   \n",
-       "Income                         35000          24800          80938   \n",
-       "IncomePerCapita                13461          13705          35530   \n",
-       "PovertyRate                     43.1           24.8           17.1   \n",
-       "ChildPovertyRate                55.6           29.9            0.0   \n",
-       "EmployedPopulation               967            183             39   \n",
-       "UnemploymentRate                27.0           38.2           33.9   \n",
-       "UnemployedPopulation             504            113             20   \n",
-       "EmploymentRate                  51.8           61.8           66.1   \n",
+       "                               2653           2673             2678  \\\n",
+       "State                         Texas          Texas            Texas   \n",
+       "County                Kenedy County  Loving County  McMullen County   \n",
+       "Population                      564             74              600   \n",
+       "MenPopulation                   280             39              321   \n",
+       "WomenPopulation                 284             35              279   \n",
+       "VotingAgeCitizen                296             59              406   \n",
+       "Income                        24800          80938            71389   \n",
+       "IncomePerCapita               13705          35530            33472   \n",
+       "PovertyRate                    24.8           17.1              7.0   \n",
+       "ChildPovertyRate               29.9            0.0              0.0   \n",
+       "EmployedPopulation              183             39              202   \n",
+       "UnemploymentRate               38.2           33.9             26.3   \n",
+       "UnemployedPopulation            113             20              107   \n",
+       "EmploymentRate                 61.8           66.1             49.8   \n",
        "\n",
-       "                                 2678             3132  \n",
-       "State                           Texas          Wyoming  \n",
-       "County                McMullen County  Niobrara County  \n",
-       "Population                        600             2479  \n",
-       "MenPopulation                     321             1098  \n",
-       "WomenPopulation                   279             1381  \n",
-       "VotingAgeCitizen                  406             1999  \n",
-       "Income                          71389            36793  \n",
-       "IncomePerCapita                 33472            23370  \n",
-       "PovertyRate                       7.0             14.9  \n",
-       "ChildPovertyRate                  0.0             13.5  \n",
-       "EmployedPopulation                202             1067  \n",
-       "UnemploymentRate                 26.3             46.6  \n",
-       "UnemployedPopulation              107              932  \n",
-       "EmploymentRate                   49.8             53.4  "
+       "                                 3132  \n",
+       "State                         Wyoming  \n",
+       "County                Niobrara County  \n",
+       "Population                       2479  \n",
+       "MenPopulation                    1098  \n",
+       "WomenPopulation                  1381  \n",
+       "VotingAgeCitizen                 1999  \n",
+       "Income                          36793  \n",
+       "IncomePerCapita                 23370  \n",
+       "PovertyRate                      14.9  \n",
+       "ChildPovertyRate                 13.5  \n",
+       "EmployedPopulation               1067  \n",
+       "UnemploymentRate                 46.6  \n",
+       "UnemployedPopulation              932  \n",
+       "EmploymentRate                   53.4  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3604,15 +3678,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* again, despite many of these extreme values seeming unrealistic in real life, I am keeping them as they are, since they reflect the data source information"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3625,7 +3692,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3636,7 +3703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3925,7 +3992,7 @@
        "[3142 rows x 14 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3941,7 +4008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -4123,7 +4190,7 @@
        "UnemploymentRate              8.2            4.9  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4134,7 +4201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
